ISSTA-2023-AE/data/Evaluation/EVALUATION-VIA-CONTROLLED-EXPERIMENTS/Bug-finding-trails/clang-fuzzer/llvm/set-3/fuzzer-file-1ab1d216f9757a3dff3b22372a925925c66215af.log
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/tar-data/clang-fuzzer-3/segment_20/1ab1d216f9757a3dff3b22372a925925c66215af.c:14:2: error: invalid preprocessing directive
#deARC fine DECLAREF(INDEX) *ptr##INDEX = ptrs[INDEX], result#/* corpus/20100806-1.c */
 ^
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/tar-data/clang-fuzzer-3/segment_20/1ab1d216f9757a3dff3b22372a925925c66215af.c:19:3: error: use of undeclared identifier 'fo'
  fo/* corpus/20100805-1.c */
  ^
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/tar-data/clang-fuzzer-3/segment_20/1ab1d216f9757a3dff3b22372a925925c66215af.c:31:1: error: function definition is not allowed here
{
^
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/tar-data/clang-fuzzer-3/segment_20/1ab1d216f9757a3dff3b22372a925925c66215af.c:37:1: error: use of undeclared identifier 'nt'
nt n)
^
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/tar-data/clang-fuzzer-3/segment_20/1ab1d216f9757a3dff3b22372a925925c66215af.c:44:3: error: called object type 'int' is not a function or function pointer
  MULTI ( 1 | a >> (sizeof (unsigned int) *COPYOUT);
  ^
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/tar-data/clang-fuzzer-3/segment_20/1ab1d216f9757a3dff3b22372a925925c66215af.c:10:11: note: expanded from macro 'MULTI'
  X( 0), X( 1), X( 2), X( 3), X( 4), X( 5), X( 6), X( 7), X( 8), X( 9), \
         ~^
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/tar-data/clang-fuzzer-3/segment_20/1ab1d216f9757a3dff3b22372a925925c66215af.c:44:3: error: expected ']'
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/tar-data/clang-fuzzer-3/segment_20/1ab1d216f9757a3dff3b22372a925925c66215af.c:10:15: note: expanded from macro 'MULTI'
  X( 0), X( 1), X( 2), X( 3), X( 4), X( 5), X( 6), X( 7), X( 8), X( 9), \
              ^
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/tar-data/clang-fuzzer-3/segment_20/1ab1d216f9757a3dff3b22372a925925c66215af.c:48:12: note: to match this '['
float inpkt[ 8 - 1);
           ^
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/tar-data/clang-fuzzer-3/segment_20/1ab1d216f9757a3dff3b22372a925925c66215af.c:45:8: error: a parameter list without types is only allowed in a function definition
  bar (b);
       ^
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/tar-data/clang-fuzzer-3/segment_20/1ab1d216f9757a3dff3b22372a925925c66215af.c:46:1: error: extraneous closing brace ('}')
}
^
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/tar-data/clang-fuzzer-3/segment_20/1ab1d216f9757a3dff3b22372a925925c66215af.c:44:3: error: called object type 'int' is not a function or function pointer
  MULTI ( 1 | a >> (sizeof (unsigned int) *COPYOUT);
  ^
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/tar-data/clang-fuzzer-3/segment_20/1ab1d216f9757a3dff3b22372a925925c66215af.c:10:18: note: expanded from macro 'MULTI'
  X( 0), X( 1), X( 2), X( 3), X( 4), X( 5), X( 6), X( 7), X( 8), X( 9), \
                ~^
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/tar-data/clang-fuzzer-3/segment_20/1ab1d216f9757a3dff3b22372a925925c66215af.c:44:3: error: expected ']'
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/tar-data/clang-fuzzer-3/segment_20/1ab1d216f9757a3dff3b22372a925925c66215af.c:10:22: note: expanded from macro 'MULTI'
  X( 0), X( 1), X( 2), X( 3), X( 4), X( 5), X( 6), X( 7), X( 8), X( 9), \
                     ^
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/tar-data/clang-fuzzer-3/segment_20/1ab1d216f9757a3dff3b22372a925925c66215af.c:48:12: note: to match this '['
float inpkt[ 8 - 1);
           ^
PLEASE submit a bug report to https://bugs.llvm.org/ and include the crash backtrace, preprocessed source, and associated run script.
Stack dump:
0.	Program arguments: /usr/lib/llvm-12/bin/clang -cc1 -triple x86_64-pc-linux-gnu -emit-obj -mrelax-all --mrelax-relocations -disable-free -disable-llvm-verifier -discard-value-names -main-file-name 1ab1d216f9757a3dff3b22372a925925c66215af.c -mrelocation-model static -mframe-pointer=all -fmath-errno -fno-rounding-math -mconstructor-aliases -munwind-tables -target-cpu x86-64 -tune-cpu generic -fno-split-dwarf-inlining -debugger-tuning=gdb -resource-dir /usr/lib/llvm-12/lib/clang/12.0.1 -I /home/user42/data/csmith/runtime/ -I /home/user42/data/csmith/build/runtime/ -internal-isystem /usr/local/include -internal-isystem /usr/lib/llvm-12/lib/clang/12.0.1/include -internal-externc-isystem /usr/include/x86_64-linux-gnu -internal-externc-isystem /include -internal-externc-isystem /usr/include -O0 -pedantic -w -fdebug-compilation-dir /home/user42/cf_3_crash_22082022/llvm -ferror-limit 19 -fgnuc-version=4.2.1 -faddrsig -o /tmp/1ab1d216f9757a3dff3b22372a925925c66215af-aacf59.o -x c /home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/tar-data/clang-fuzzer-3/segment_20/1ab1d216f9757a3dff3b22372a925925c66215af.c
1.	/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/tar-data/clang-fuzzer-3/segment_20/1ab1d216f9757a3dff3b22372a925925c66215af.c:44:3 <Spelling=/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/tar-data/clang-fuzzer-3/segment_20/1ab1d216f9757a3dff3b22372a925925c66215af.c:44:52>: current parser token ';'
clang: error: unable to execute command: Segmentation fault (core dumped)
clang: error: clang frontend command failed due to signal (use -v to see invocation)
Ubuntu clang version 12.0.1-++20211102090516+fed41342a82f-1~exp1~20211102211019.11
Target: x86_64-pc-linux-gnu
Thread model: posix
InstalledDir: /usr/bin
clang: note: diagnostic msg: Error generating preprocessed source(s).
